# github-notifier

./: .releaserc.json  CHANGELOG.md  bun.lockb  package-lock.json  package.json
.github/workflows/: release.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  constants.rs  github.rs  main.rs  notifications.rs  utils.rs
