[package]
name = "github-notifier"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-http = "2.0.0-beta.6"
tauri-plugin-notification = "2.0.0-beta.4"
tokio = "1.37.0"
dotenv = "0.15.0"
oauth2 = "4.4.2"
keyring = "2.3.2"
futures = "0.3.30"
tauri-plugin-autostart = "2.0.0-beta.5"
tauri-plugin-deep-link = "2.0.0-beta.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
