[package]
name = "github-notifier"
version = "0.0.0"
description = "GitHub Notifier"
authors = ["ceski23"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-http = "2.0.0-beta.6"
tauri-plugin-notification = "2.0.0-beta.7"
tokio = "1.37.0"
dotenv = "0.15.0"
oauth2 = "4.4.2"
keyring = "2.3.2"
futures = "0.3.30"
tauri-plugin-autostart = "2.0.0-beta.5"
tauri-plugin-deep-link = "2.0.0-beta.7"
temp-file = "0.1.8"
base64 = "0.22.1"
url = "2.5.0"
anyhow = "1.0.82"
tauri-plugin-single-instance = "2.0.0-beta.9"
tauri-plugin-dialog = "2.0.0-beta.9"

[target."cfg(target_os=\"macos\")".dependencies]
mac-notification-sys = "0.6"

[target."cfg(target_os=\"windows\")".dependencies]
tauri-winrt-notification = "0.4.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0-beta.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
